k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bosl-high-seas
  namespace: biodiversity
  labels:
    app: bosl-high-seas
spec:
  type: ClusterIP
  selector:
    app: bosl-high-seas
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
